@@ -9,6 +9,7 @@
 Release 0.68 '' September xx, 2008
 ---------------------------------------
 
+2009-12-27 VZ: Pre-fill composer recipient with address from clipboard if any.
 2008-08-05 VZ: Add support for signing outgoing messages using OpenPGP
 2008-05-04 VZ: Improve the display of the embedded messages.
 2008-05-04 VZ: Allow toggling tool/status bars and showing full-screen.
